# openapi/api.yaml
@@ -1763,8 +1763,14 @@ components:
       properties:
         filename:
           type: string
+        notebookId:
+          type: string
+        userId:
+          type: string
       required:
       - filename
+      - userId
+      - notebookId
       type: object
     RenameRequest:
       properties:
